--- a/skins/contrib/Mozilla/global.css
+++ b/skins/contrib/Mozilla/global.css
@@ -527,6 +527,10 @@ input.required, select.required, span.required_explanation {
     margin: .2em 0;
 }
 
+.bz_comment_hours {
+    margin: 0;
+}
+
 .bz_first_comment_head, .bz_comment_head, .bz_comment_wthead {
     font-weight: normal;
     line-height: 32px;
