--- a/skins/standard/comments.css
+++ b/skins/standard/comments.css
@@ -1,3 +1,5 @@
+#collapse_expand_comments a { margin: 0 8px; }
+
 .bz_comment_table td { vertical-align: top; }
 
 .bz_comment_user, .bz_comment_time,
